# pipeline

./: .gitignore  README.md  first_step.txt  flowchart.puml  main.py  main.sh  package.json  pyproject.toml  smart_contract.sol  start_blockchain.sh  start_blockchain_brownie.sh
Chain-of-Thought-Results/: mortgage-CoT-SC-generated.txt
Chain-of-Thoughts-Results/: mortgage-CoT-SC-generated.txt
pipeline/: consts.py  pipeline.py  postprocessing.py  prompts.py
reference_smart_contracts/: SmartLeaseAgreement.sol
results-feb-24/: sc-PR1-test-1.sol  sc-PR1-test-2.sol  sc-PR1-test-3.sol  sc-PR1-test-4.sol  sc-PR10-test-1.sol  sc-PR10-test-2.sol  sc-PR10-test-3.sol  sc-PR10-test-4.sol  sc-PR11-test-1.sol  sc-PR11-test-2.sol  sc-PR11-test-3.sol  sc-PR11-test-4.sol  sc-PR12-test-1.sol  sc-PR12-test-2.sol  sc-PR12-test-3.sol  sc-PR12-test-4.sol  sc-PR13-test-1.sol  sc-PR13-test-2.sol  sc-PR13-test-3.sol  sc-PR13-test-4.sol  sc-PR14-test-1.sol  sc-PR14-test-2.sol  sc-PR14-test-3.sol  sc-PR14-test-4.sol  sc-PR15-test-1.sol  sc-PR15-test-2.sol  sc-PR15-test-3.sol  sc-PR15-test-4.sol  sc-PR16-test-1.sol  sc-PR16-test-2.sol  sc-PR16-test-3.sol  sc-PR16-test-4.sol  sc-PR17-test-1.sol  sc-PR17-test-2.sol  sc-PR17-test-3.sol  sc-PR17-test-4.sol  sc-PR2-test-2.sol  sc-PR2-test-3.sol  sc-PR2-test-4.sol  sc-PR3-test-1.sol  (+27 more)
test_contracts/: Cleaning Service Contract Template.docx  LeaseAgreement03.txt  LeaseAgreement04.txt  LeaseAgreement05.txt  Mortgage Note Template.docx  ~$uipment Rental Agreement Template.docx
test_contracts_doc/: Cleaning Service Contract Template.docx  (+3 more)
(+6 files in other folders)
